--- a/src/app/views/exam/exam.component.html
+++ b/src/app/views/exam/exam.component.html
@@ -1,5 +1,15 @@
 
+<h1>Quizz</h1>
 <app-quiz></app-quiz>
+
+<h1>Grammar</h1>
+<app-grammar></app-grammar>
+
+<h1>Speaking</h1>
+<app-speaking></app-speaking>
+
+<h1>Dictation</h1>
+<app-dictation></app-dictation>
 
 
 <!-- <app-grammar></app-grammar> -->
