--- a/src/app/components/dictation/dictation.component.html
+++ b/src/app/components/dictation/dictation.component.html
@@ -1,1 +1,6 @@
-<p>dictation works!</p>
+<video controls>
+    <source src="../../../assets/dictation.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+</video>
+
+<textarea></textarea>
