--- a/src/app/views/exam/exam.component.html
+++ b/src/app/views/exam/exam.component.html
@@ -1,17 +1,20 @@
-<div id="exam">
+<div id="exam" class="flex flex-row">
     <app-menubar></app-menubar>
     
-    <h1>Quizz</h1>
-    <app-quiz></app-quiz>
-    
-    <h1>Grammar</h1>
-    <app-grammar></app-grammar>
-    
-    <h1>Speaking</h1>
-    <app-speaking></app-speaking>
-    
-    <h1>Dictation</h1>
-    <app-dictation></app-dictation>
+    <div class="h-screen overflow-auto w-full">
+
+        <h1>Quizz</h1>
+        <app-quiz></app-quiz>
+        
+        <h1>Grammar</h1>
+        <app-grammar></app-grammar>
+        
+        <h1>Speaking</h1>
+        <app-speaking></app-speaking>
+        
+        <h1>Dictation</h1>
+        <app-dictation></app-dictation>
+    </div>
 </div>
 
 
