--- a/src/app/components/menubar/menubar.component.html
+++ b/src/app/components/menubar/menubar.component.html
@@ -1,12 +1,12 @@
-<div id="menubar">
+<div id="menubar" class="flex flex-col items-center">
 
-    <img src="../../../assets/logo.png" alt="">
+    <img src="../../../assets/logo.png" alt="" class="w-1/2 mt-8 mb-16" style="filter: contrast(0) brightness(1.75);">
 
     <ul>
-        <li>Quiz</li>
-        <li>Grammar</li>
-        <li>Dictation</li>
-        <li>Speaking</li>
+        <li class="active"><fa-icon [icon]="faQuestionCircle"></fa-icon> Quiz</li>
+        <li><fa-icon [icon]="faBook"></fa-icon> Grammar</li>
+        <li><fa-icon [icon]="faEdit"></fa-icon> Dictation</li>
+        <li><fa-icon [icon]="faMicrophone"></fa-icon> Speaking</li>
     </ul>
 
 </div>
