--- a/src/app/views/exam/exam.component.scss
+++ b/src/app/views/exam/exam.component.scss
@@ -1,4 +1,4 @@
 #exam{
-    outline: 1px solid red;
-    outline-offset: -2px;
+    background-color: #091421;
+    color: rgba(255,255,255,0.75);
 }
