--- a/src/app/views/exam/exam.component.html
+++ b/src/app/views/exam/exam.component.html
@@ -3,6 +3,8 @@
     
     <div class="h-screen overflow-auto w-full">
 
+        <app-header></app-header>
+
         <h1>Quizz</h1>
         <app-quiz></app-quiz>
         
