--- a/src/app/components/quiz/quiz.component.html
+++ b/src/app/components/quiz/quiz.component.html
@@ -1,10 +1,17 @@
 <ng-template ngFor let-item [ngForOf]="questions" let-i="index">
-    <div>
+    <div class="flex flex-col items-center pt-28" *ngIf="i == 0">
         
-        <fa-icon [icon]="faVolumeHigh" (click)="speak(item.question)"></fa-icon>
+        <fa-icon [icon]="faVolumeHigh" (click)="speak(item.question)" class="cursor-pointer text-5xl mb-10"></fa-icon>
         
-        <button>Yes</button>
-        <button>No</button>
+        <div class="options">
+            <div class="mb-4">
+                <button class="mr-4">Yes</button>
+                <button>No</button>
+            </div>
+            <button class="w-full">
+                <span>Continue</span> <fa-icon [icon]="faArrowRight" class="ml-3"></fa-icon>
+            </button>
+        </div>
         
     </div>
 </ng-template>
