--- a/src/app/components/quiz/quiz.component.scss
+++ b/src/app/components/quiz/quiz.component.scss
@@ -1,8 +1,35 @@
-.options{
-    button{
+.options {
+    button {
         padding: 10px 50px;
         border: 4px solid #1c395a;
         border-radius: 999px;
         font-weight: bold;
     }
 }
+
+.carousel {
+    position: relative;
+    display: flex;
+    overflow: hidden;
+    width: 100%;
+    height: 400px
+        /* Adjust the height as needed */
+}
+
+.slide {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    transform: translateX(-100%);
+    /* Initial slide position */
+    transition: transform 0.3s ease-in-out;
+}
+
+.active {
+    transform: translateX(0);
+}
+
+//   button {
+//     margin-top: 10px;
+//   }
