--- a/src/app/components/grammar/grammar.component.html
+++ b/src/app/components/grammar/grammar.component.html
@@ -1,3 +1,42 @@
+<div class="carousel">
+
+    <app-progressbar [array]="questions" class="w-full" [currentIndex]="currentIndex"></app-progressbar>
+
+    <ng-template ngFor let-item [ngForOf]="questions" let-i="index">
+        <div class="flex flex-col items-center pt-32 slide"
+            [ngClass]="{'active': i === currentIndex, 'previous': i < currentIndex}">
+
+            <!-- <fa-icon [icon]="faVolumeHigh" (click)="item.timesHeard != 2 ? speak(i) : 0" class="text-6xl mb-3" [ngClass]="{'cursor-pointer': item.timesHeard != 2}"></fa-icon> -->
+
+            <!-- <div class="grid grid-flow-col gap-3 ">
+                <fa-icon [icon]="faHeart" [ngClass]="{'text-red-600': item.timesHeard == null || item.timesHeard == 1}"></fa-icon>
+                <fa-icon [icon]="faHeart" [ngClass]="{'text-red-600': item.timesHeard == null}"></fa-icon>
+            </div> -->
+
+            <p class="text-2xl sentence">
+                <span *ngFor="let word of item.question.split(' ')" (click)="speak(word)">{{word}}</span>
+            </p>
+
+            <div class="options mt-10">
+                <div class="mb-4">
+                    <!-- <button [ngClass]="{'active': item.answered === 1}" (click)="answer(i, 1)" class="mr-4">Yes</button>
+                    <button [ngClass]="{'active': item.answered === 0}" (click)="answer(i, 0)">No</button>
+ -->
+                    
+                    <button (click)="answer(i, item.right); speak(item.right)" [ngClass]="{'active': item.answered === item.right}"  class="mr-4">{{item.right}}</button>
+                    <button (click)="answer(i, item.wrong); speak(item.wrong)" [ngClass]="{'active': item.answered === item.wrong}">{{item.wrong}}</button>
+
+                </div>
+                <button class="w-full" (click)="continue()" *ngIf="item.answered">
+                    <span>Continue</span> <fa-icon [icon]="faArrowRight" class="ml-3"></fa-icon>
+                </button>
+            </div>
+
+        </div>
+    </ng-template>
+
+</div>
+<!-- 
 <ng-template ngFor let-item [ngForOf]="questions" let-i="index">
     <div>
         <p>
@@ -7,4 +46,4 @@
         <button (click)="speak(item.right)">{{item.right}}</button>
         <button (click)="speak(item.wrong)">{{item.wrong}}</button>
     </div>
-</ng-template>
+</ng-template> -->
