--- a/src/app/components/menubar/menubar.component.scss
+++ b/src/app/components/menubar/menubar.component.scss
@@ -15,6 +15,7 @@
         border-bottom-left-radius: 100px;
         display: flex;
         align-items: center;
+        cursor: pointer;
 
         fa-icon {
             border-radius: 15px;
