--- a/src/app/components/speaking/speaking.component.html
+++ b/src/app/components/speaking/speaking.component.html
@@ -1,7 +1,51 @@
-<div *ngFor="let number of [0,1,2,3,4]">
+<!-- <div *ngFor="let number of [0,1,2,3,4]">
 
     <p>{{speachText}}</p>
 
     <fa-icon [icon]="faMicrophone" (click)="isUserSpeaking? stopRecording() : startRecording()"></fa-icon>
+
+</div> -->
+
+<div class="carousel">
+
+    <app-progressbar [array]="questions" class="w-full" [currentIndex]="currentIndex"></app-progressbar>
+
+    <ng-template ngFor let-item [ngForOf]="questions" let-i="index">
+        <div class="flex flex-col items-center pt-32 slide"
+            [ngClass]="{'active': i === currentIndex, 'previous': i < currentIndex}">
+
+            <!-- <fa-icon [icon]="faVolumeHigh" (click)="item.timesHeard != 2 ? speak(i) : 0" class="text-6xl mb-3"
+                [ngClass]="{'cursor-pointer': item.timesHeard != 2}"></fa-icon>
+
+            -->
+                
+                <video  class="mr-2" width="300px">
+                    <source src="../../../assets/speaking-1.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+                
+                <div class="grid grid-flow-col gap-3 ">
+                    <fa-icon [icon]="faHeart"
+                        [ngClass]="{'text-red-600': item.timesHeard == null || item.timesHeard == 1}"></fa-icon>
+                    <fa-icon [icon]="faHeart" [ngClass]="{'text-red-600': item.timesHeard == null}"></fa-icon>
+                </div>
+    
+
+            <fa-icon [icon]="faMicrophone" (click)="isUserSpeaking? stopRecording() : startRecording()"></fa-icon>
+            <p>{{speachText}}</p>
+
+            <!-- <div class="options mt-10">
+                <div class="mb-4">
+                    <button [ngClass]="{'active': item.answered === 1}" (click)="answer(i, 1)" class="mr-4">Yes</button>
+                    <button [ngClass]="{'active': item.answered === 0}" (click)="answer(i, 0)">No</button>
+                </div>
+            -->
+            <button class="w-full" (click)="continue()" *ngIf="true">
+                <span>Continue</span> <fa-icon [icon]="faArrowRight" class="ml-3"></fa-icon>
+            </button>
+            <!-- </div>  -->
+
+        </div>
+    </ng-template>
 
 </div>
