--- a/src/app/components/quiz/quiz.component.scss
+++ b/src/app/components/quiz/quiz.component.scss
@@ -4,6 +4,9 @@
         border: 4px solid #1c395a;
         border-radius: 999px;
         font-weight: bold;
+        &.active{
+            background-color: #0679fc;
+        }
     }
 }
 
@@ -21,9 +24,14 @@
     top: 0;
     left: 0;
     width: 100%;
-    transform: translateX(-100%);
+    transform: translateX(100%);
     /* Initial slide position */
-    transition: transform 0.3s ease-in-out;
+    transition: transform 0.5s ease-in-out;
+
+    &.previous {
+        transform: translateX(-100%);
+
+    }
 }
 
 .active {
