--- a/src/app/components/speaking/speaking.component.scss
+++ b/src/app/components/speaking/speaking.component.scss
@@ -4,7 +4,8 @@
         border: 4px solid #1c395a;
         border-radius: 999px;
         font-weight: bold;
-        &.active{
+
+        &.active {
             background-color: #0679fc;
         }
     }
@@ -41,3 +42,28 @@
 //   button {
 //     margin-top: 10px;
 //   }
+
+#video-container:hover {
+    .play-btn {
+        display: none;
+    }
+}
+
+video{
+    cursor: pointer;
+}
+
+@keyframes pulsate{
+    0%{
+        transform: scale(1)
+    }
+    100%{
+        transform: scale(1.2)
+    }
+}
+
+#transcription .recording{
+    color:  rgb(201, 33, 33);
+    background-color: white;
+    animation: pulsate 1s infinite alternate-reverse;
+}
