--- a/src/app/components/menubar/menubar.component.html
+++ b/src/app/components/menubar/menubar.component.html
@@ -1,6 +1,7 @@
 <div id="menubar" class="flex flex-col items-center">
 
-    <img src="../../../assets/logo.png" alt="" class="w-1/2 mt-8 mb-16" style="filter: contrast(0) brightness(1.75);">
+    <img src="../../../assets/logo.png" alt="" class="w-1/2 mt-8 mb-4" style="filter: contrast(0) brightness(1.75);">
+    <img src="../../../assets/callan-logo.png" alt="" class="w-24 mb-12">
 
     <ul>
         <li (click)="changeMenu('quiz')" [ngClass]="{active: currentMenu == 'quiz'}"><fa-icon [icon]="faQuestionCircle"></fa-icon> Quiz</li>
