--- a/src/app/components/dictation/dictation.component.html
+++ b/src/app/components/dictation/dictation.component.html
@@ -3,7 +3,7 @@
     <h1 class="text-2xl mb-5">Play the video below to do the dictation</h1>
     <div class="flex flex-row w-full">
      
-        <video controls class="mr-2" width="45%">
+        <video controls class="mr-2" width="45%" controls controlsList="nodownload noplaybackrate nofullscreen" disablepictureinpicture>
             <source src="../../../assets/dictation.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
