--- a/src/app/components/quiz/quiz.component.html
+++ b/src/app/components/quiz/quiz.component.html
@@ -6,9 +6,10 @@
         <div class="flex flex-col items-center pt-32 slide"
             [ngClass]="{'active': i === currentIndex, 'previous': i < currentIndex}">
 
-            <fa-icon [icon]="faVolumeHigh" (click)="item.timesHeard != 2 ? speak(i) : 0" class="text-6xl mb-3" [ngClass]="{'cursor-pointer': item.timesHeard != 2}"></fa-icon>
+            <fa-icon [icon]="faVolumeHigh" (click)="item.timesHeard != 3 ? speak(i) : 0" class="text-6xl mb-3" [ngClass]="{'cursor-pointer': item.timesHeard != 3}"></fa-icon>
 
             <div class="grid grid-flow-col gap-3 ">
+                <fa-icon [icon]="faHeart" [ngClass]="{'text-red-600': item.timesHeard == null || item.timesHeard <= 2}"></fa-icon>
                 <fa-icon [icon]="faHeart" [ngClass]="{'text-red-600': item.timesHeard == null || item.timesHeard == 1}"></fa-icon>
                 <fa-icon [icon]="faHeart" [ngClass]="{'text-red-600': item.timesHeard == null}"></fa-icon>
             </div>
