--- a/src/app/components/speaking/speaking.component.html
+++ b/src/app/components/speaking/speaking.component.html
@@ -37,7 +37,7 @@
 
                 </div>
 
-                <div id="transcription" style="height: 225px; width: 300px;" class="flex items-center flex-col justify-center">
+                <div id="transcription" style="height: 225px; width: 300px;" class="flex items-center flex-col justify-center pl-8">
 
                     <fa-icon [icon]="faMicrophone" (click)="isUserSpeaking? stopRecording() : startRecording()" 
                     class="cursor-pointer text-5xl mb-4 bg-sky-600 aspect-square flex justify-center items-center p-4 rounded-full"
@@ -45,7 +45,7 @@
 
                     <p *ngIf="!speachText">Click to record</p>
 
-                    <p>{{speachText}}</p>
+                    <p class="text-center">{{speachText}}</p>
 
                     
                     <div class="options mt-3">
