--- a/src/app/components/dictation/dictation.component.html
+++ b/src/app/components/dictation/dictation.component.html
@@ -2,12 +2,23 @@
 
     <h1 class="text-2xl mb-5">Play the video below to do the dictation</h1>
     <div class="flex flex-row w-full">
-     
-        <video controls class="mr-2" width="45%" controls controlsList="nodownload noplaybackrate nofullscreen" disablepictureinpicture>
+
+        <video controls class="mr-2" width="45%" controls controlsList="nodownload noplaybackrate nofullscreen"
+            disablepictureinpicture>
             <source src="../../../assets/dictation.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-        
-        <textarea class="text-black p-5 ml-2 w-full" cols="50" placeholder="Type what you hear from the video"></textarea>
+
+        <textarea class="text-black p-5 ml-2 w-full" cols="50"
+            placeholder="Type what you hear from the video"></textarea>
     </div>
+
+    <div class="flex flex-col items-center mt-10">
+        <div class="options">
+            <button class="w-full" (click)="finish()">
+                <span>Continue to Speaking</span> <fa-icon [icon]="faArrowRight" class="ml-3"></fa-icon>
+            </button>
+        </div>
+    </div>
+
 </div>
