--- a/src/app/components/quiz/quiz.component.html
+++ b/src/app/components/quiz/quiz.component.html
@@ -6,11 +6,14 @@
         <div class="flex flex-col items-center pt-32 slide"
             [ngClass]="{'active': i === currentIndex, 'previous': i < currentIndex}">
 
-            <fa-icon [icon]="faVolumeHigh" (click)="item.timesHeard != 3 ? speak(i) : 0" class="text-6xl mb-3" [ngClass]="{'cursor-pointer': item.timesHeard != 3}"></fa-icon>
+            <fa-icon [icon]="faVolumeHigh" (click)="item.timesHeard != 3 ? speak(i) : 0" class="text-6xl mb-3"
+                [ngClass]="{'cursor-pointer': item.timesHeard != 3}"></fa-icon>
 
             <div class="grid grid-flow-col gap-3 ">
-                <fa-icon [icon]="faHeart" [ngClass]="{'text-red-600': item.timesHeard == null || item.timesHeard <= 2}"></fa-icon>
-                <fa-icon [icon]="faHeart" [ngClass]="{'text-red-600': item.timesHeard == null || item.timesHeard == 1}"></fa-icon>
+                <fa-icon [icon]="faHeart"
+                    [ngClass]="{'text-red-600': item.timesHeard == null || item.timesHeard <= 2}"></fa-icon>
+                <fa-icon [icon]="faHeart"
+                    [ngClass]="{'text-red-600': item.timesHeard == null || item.timesHeard == 1}"></fa-icon>
                 <fa-icon [icon]="faHeart" [ngClass]="{'text-red-600': item.timesHeard == null}"></fa-icon>
             </div>
 
@@ -26,5 +29,18 @@
 
         </div>
     </ng-template>
+
+    <div class="flex flex-col items-center pt-32 slide"
+        [ngClass]="{'active':  questions.length === currentIndex, 'previous': questions.length < currentIndex}">
+        <h1 class="text-3xl">
+            You have completed the quiz!
+        </h1>
+        <br>
+        <div class="options">
+            <button class="w-full" (click)="finish()">
+                <span>Continue to Grammar</span> <fa-icon [icon]="faArrowRight" class="ml-3"></fa-icon>
+            </button>
+        </div>
+    </div>
 
 </div>
