--- a/src/app/components/speaking/speaking.component.html
+++ b/src/app/components/speaking/speaking.component.html
@@ -22,7 +22,7 @@
             <div class="flex flex-row">
                 <div class="relative" id="video-container">
 
-                    <video width="330px" (click)="toggleVideo()">
+                    <video width="300px" (click)="toggleVideo()">
                         <source src="../../../assets/speaking-{{i+1}}.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
@@ -32,22 +32,23 @@
                         <fa-icon [icon]="faHeart" [ngClass]="{'text-red-600': timesHeard == 0}" class="ml-2"></fa-icon>
                     </div>
 
-                    <fa-icon [icon]="faPlay" class="play-btn absolute top-1/2 -mt-5 left-1/2 -ml-2 text-4xl" ></fa-icon>
+                    <fa-icon [icon]="faPlay" class="play-btn absolute top-1/2 -mt-5 left-1/2 -ml-2 text-4xl"></fa-icon>
 
 
                 </div>
 
-                <div id="transcription" style="height: 225px; width: 300px;" class="flex items-center flex-col justify-center pl-8">
+                <div id="transcription" style="height: 225px; width: 300px;"
+                    class="flex items-center flex-col justify-center pl-8">
 
-                    <fa-icon [icon]="faMicrophone" (click)="isUserSpeaking? stopRecording() : startRecording()" 
-                    class="cursor-pointer text-5xl mb-4 bg-sky-600 aspect-square flex justify-center items-center p-4 rounded-full"
-                    [ngClass]="isUserSpeaking?'recording':''"></fa-icon>
+                    <fa-icon [icon]="faMicrophone" (click)="isUserSpeaking? stopRecording() : startRecording()"
+                        class="cursor-pointer text-5xl mb-4 bg-sky-600 aspect-square flex justify-center items-center p-4 rounded-full"
+                        [ngClass]="isUserSpeaking?'recording':''"></fa-icon>
 
                     <p *ngIf="!speachText">Click to record</p>
 
                     <p class="text-center">{{speachText}}</p>
 
-                    
+
                     <div class="options mt-3">
 
                         <button class="w-full mt-2" (click)="continue()" *ngIf="speachText">
@@ -68,5 +69,19 @@
 
         </div>
     </ng-template>
+
+    <div class="flex flex-col items-center pt-32 slide"
+        [ngClass]="{'active':  questions.length === currentIndex, 'previous': questions.length < currentIndex}">
+        <h1 class="text-3xl text-center mb-1">
+            Congratulations on completing the Exam!<br><br>
+        </h1>
+        <p>
+            You can expect to receive the results and grades in the near future.
+        </p>
+        <p class="text-3xl mt-2">
+            🎉 🎉 🎉 
+        </p>
+    </div>
+
 
 </div>
