--- a/src/app/components/dictation/dictation.component.html
+++ b/src/app/components/dictation/dictation.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-col justify-center m-10">
 
-    <h1 class="text-2xl mb-5">Play the video below to do the dictation</h1>
+    <h1 class="text-2xl mb-5">Begin the dictation exercise by playing the video below.</h1>
     <div class="flex flex-row w-full">
 
         <video controls class="mr-2" width="45%" controls controlsList="nodownload noplaybackrate nofullscreen"
@@ -10,7 +10,7 @@
         </video>
 
         <textarea class="text-black p-5 ml-2 w-full" cols="50"
-            placeholder="Type what you hear from the video"></textarea>
+            placeholder="Type what you hear from the video" spellcheck="false"></textarea>
     </div>
 
     <div class="flex flex-col items-center mt-10">
